public abstract class CriterioBusqueda {
    public abstract boolean cumple(Pelicula pelicula);
}
